# rCore-Study

./: .gitignore  .gitmodules  Makefile  README.md  Readme.md
myos/: .envrc  Cargo.toml  Dockerfile  Makefile
myos/.cargo/: config.toml
myos/mysbi/src/: console.rs  main.rs  sbi_base.ld  sbi_boot.S  sbi_entry.S  sbi_trap.rs  uart.rs
myos/os/: Cargo.toml
myos/os/src/: boot.S  config.rs  entry.S  lang_item.rs  linker.ld  main.rs  syscall.rs  timer.rs  trap.rs
myos/os/src/base/: add_sub.rs  asm_test.S  call.rs  compare.rs  csr.rs  fp.rs  load_store.rs  mod.rs  pc.rs  ra.rs  shift.rs
myos/os/src/mm/: address.rs  mod.rs
myos/sbi/: Cargo.toml
myos/sbi/.cargo/: config.toml
myos/sbi/src/: main.rs  sbi_base.ld  sbi_boot.S  sbi_linker.ld
myos/src/: linker.ld  sbi_base.ld  sbi_linker.ld
myos/xtask/: Cargo.toml
myos/xtask/src/: main.rs
os/: Cargo.toml  Makefile  build.rs
os/.cargo/: config.toml
os/src/: batch.rs  config.rs  entry.asm  lang_items.rs  linker-qemu.ld  loader.rs  logging.rs  main.rs  sbi.rs  stack_trace.rs  timer.rs
os/src/board/: qemu.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
os/src/sync/: up.rs
os/src/syscall/: fs.rs  mod.rs  process.rs
os/src/task/: context.rs  mod.rs  switch.S  switch.rs  task.rs
os/src/trap/: context.rs  mod.rs  trap.S
src/: console.rs  entry.asm  lang_items.rs  linker-qemu.ld  logging.rs  main.rs  sbi.rs
user/: Cargo.toml  build.py
user/src/: console.rs  lib.rs  syscall.rs
