[package]
name = "os"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
log = "0.4.22"
sbi-rt = { version = "0.0.2", features = ["legacy"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.11.0"
bitflags = "2.4.1"
xmas-elf = "0.9.1"
